Update portfolio with detailed DevOps content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>I am a dedicated DevOps Engineer with a strong foundation in cloud technologies and automation. My expertise includes implementing CI/CD pipelines, managing cloud infrastructure, and optimizing deployment processes.</p>
+                <p>I am a passionate DevOps Engineer with expertise in cloud infrastructure, automation, and continuous integration/deployment. My focus is on building scalable, reliable, and secure infrastructure solutions that enable teams to deliver software efficiently.</p>
+                <p>With hands-on experience in AWS, Kubernetes, and various DevOps tools, I specialize in implementing Infrastructure as Code, setting up CI/CD pipelines, and managing cloud-native applications.</p>
             </div>
         </div>
     </section>
@@ -51,28 +52,38 @@
         <h2 class="section-title">Skills</h2>
         <div class="skills-container">
             <div class="skill-category">
-                <h3>DevOps & Cloud</h3>
+                <h3>Cloud & Infrastructure</h3>
                 <ul>
-                    <li><i class="fab fa-aws"></i> AWS</li>
+                    <li><i class="fab fa-aws"></i> AWS (EC2, EKS, RDS, S3)</li>
+                    <li><i class="fas fa-cloud"></i> Azure</li>
+                    <li><i class="fas fa-network-wired"></i> Networking</li>
+                    <li><i class="fas fa-shield-alt"></i> Security</li>
+                </ul>
+            </div>
+            <div class="skill-category">
+                <h3>DevOps Tools</h3>
+                <ul>
                     <li><i class="fab fa-docker"></i> Docker</li>
-                    <li><i class="fab fa-kubernetes"></i> Kubernetes</li>
+                    <li><i class="fas fa-dharmachakra"></i> Kubernetes</li>
                     <li><i class="fab fa-jenkins"></i> Jenkins</li>
+                    <li><i class="fab fa-github"></i> GitHub Actions</li>
                 </ul>
             </div>
             <div class="skill-category">
-                <h3>Programming</h3>
+                <h3>Infrastructure as Code</h3>
                 <ul>
-                    <li><i class="fab fa-python"></i> Python</li>
-                    <li><i class="fab fa-js"></i> JavaScript</li>
-                    <li><i class="fas fa-terminal"></i> Shell Scripting</li>
-                </ul>
-            </div>
-            <div class="skill-category">
-                <h3>Tools & Technologies</h3>
-                <ul>
-                    <li><i class="fab fa-git-alt"></i> Git</li>
-                    <li><i class="fab fa-linux"></i> Linux</li>
                     <li><i class="fas fa-code-branch"></i> Terraform</li>
+                    <li><i class="fab fa-ansible"></i> Ansible</li>
+                    <li><i class="fas fa-cloud-upload-alt"></i> CloudFormation</li>
+                </ul>
+            </div>
+            <div class="skill-category">
+                <h3>Monitoring & Logging</h3>
+                <ul>
+                    <li><i class="fas fa-chart-line"></i> Prometheus</li>
+                    <li><i class="fas fa-chart-bar"></i> Grafana</li>
+                    <li><i class="fas fa-search"></i> ELK Stack</li>
+                    <li><i class="fas fa-eye"></i> New Relic</li>
                 </ul>
             </div>
         </div>
@@ -93,15 +104,15 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:your.email@example.com">your.email@example.com</a>
+                    <a href="mailto:nived.dev2@gmail.com">nived.dev2@gmail.com</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-github"></i>
-                    <a href="https://github.com/nived2" target="_blank">GitHub</a>
+                    <a href="https://github.com/nived2" target="_blank">github.com/nived2</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
-                    <a href="#" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/nived-n" target="_blank">linkedin.com/in/nived-n</a>
                 </div>
             </div>
         </div>
