Added resume section and updated file paths

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -41,8 +42,8 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>I am a passionate DevOps Engineer with expertise in cloud infrastructure, automation, and continuous integration/deployment. My focus is on building scalable, reliable, and secure infrastructure solutions that enable teams to deliver software efficiently.</p>
-                <p>With hands-on experience in AWS, Kubernetes, and various DevOps tools, I specialize in implementing Infrastructure as Code, setting up CI/CD pipelines, and managing cloud-native applications.</p>
+                <p>I am a Full Stack DevOps Engineer with extensive experience in designing and implementing 3-tier applications. My expertise includes containerization with Docker, CI/CD implementation using Jenkins and GitLab, and infrastructure automation with Terraform. I specialize in building and deploying scalable web applications with modern technology stacks.</p>
+                <p>With hands-on experience in both development and operations, I excel at bridging the gap between frontend, backend, and database layers while ensuring robust deployment pipelines and monitoring solutions.</p>
             </div>
         </div>
     </section>
@@ -52,38 +53,39 @@
         <h2 class="section-title">Skills</h2>
         <div class="skills-container">
             <div class="skill-category">
-                <h3>Cloud & Infrastructure</h3>
+                <h3>Frontend Development</h3>
                 <ul>
-                    <li><i class="fab fa-aws"></i> AWS (EC2, EKS, RDS, S3)</li>
-                    <li><i class="fas fa-cloud"></i> Azure</li>
-                    <li><i class="fas fa-network-wired"></i> Networking</li>
-                    <li><i class="fas fa-shield-alt"></i> Security</li>
+                    <li><i class="fab fa-react"></i> React</li>
+                    <li><i class="fab fa-js"></i> JavaScript</li>
+                    <li><i class="fab fa-html5"></i> HTML/CSS</li>
+                    <li><i class="fab fa-bootstrap"></i> Bootstrap</li>
                 </ul>
             </div>
             <div class="skill-category">
-                <h3>DevOps Tools</h3>
+                <h3>Backend & Database</h3>
+                <ul>
+                    <li><i class="fab fa-node-js"></i> Node.js</li>
+                    <li><i class="fas fa-database"></i> PostgreSQL</li>
+                    <li><i class="fas fa-memory"></i> Redis</li>
+                    <li><i class="fas fa-server"></i> RESTful APIs</li>
+                </ul>
+            </div>
+            <div class="skill-category">
+                <h3>DevOps & Containers</h3>
                 <ul>
                     <li><i class="fab fa-docker"></i> Docker</li>
-                    <li><i class="fas fa-dharmachakra"></i> Kubernetes</li>
                     <li><i class="fab fa-jenkins"></i> Jenkins</li>
-                    <li><i class="fab fa-github"></i> GitHub Actions</li>
-                </ul>
-            </div>
-            <div class="skill-category">
-                <h3>Infrastructure as Code</h3>
-                <ul>
+                    <li><i class="fab fa-gitlab"></i> GitLab CI/CD</li>
                     <li><i class="fas fa-code-branch"></i> Terraform</li>
-                    <li><i class="fab fa-ansible"></i> Ansible</li>
-                    <li><i class="fas fa-cloud-upload-alt"></i> CloudFormation</li>
                 </ul>
             </div>
             <div class="skill-category">
-                <h3>Monitoring & Logging</h3>
+                <h3>Tools & Monitoring</h3>
                 <ul>
+                    <li><i class="fab fa-git-alt"></i> Git</li>
                     <li><i class="fas fa-chart-line"></i> Prometheus</li>
                     <li><i class="fas fa-chart-bar"></i> Grafana</li>
-                    <li><i class="fas fa-search"></i> ELK Stack</li>
-                    <li><i class="fas fa-eye"></i> New Relic</li>
+                    <li><i class="fab fa-linux"></i> Linux</li>
                 </ul>
             </div>
         </div>
@@ -94,6 +96,66 @@
         <h2 class="section-title">Projects</h2>
         <div class="projects-grid">
             <!-- Project cards will be added here -->
+        </div>
+    </section>
+
+    <!-- Resume Section -->
+    <section id="resume" class="resume">
+        <h2 class="section-title">Resume</h2>
+        <div class="resume-content">
+            <div class="resume-summary">
+                <p>Experienced DevOps professional specializing in containerization, CI/CD pipelines, and 3-tier application architecture. Proven track record in implementing scalable solutions using Docker, Jenkins, GitLab, and Terraform.</p>
+            </div>
+            <div class="resume-preview">
+                <div class="resume-section">
+                    <h3><i class="fas fa-briefcase"></i> Professional Experience</h3>
+                    <div class="timeline">
+                        <div class="timeline-item">
+                            <h4>DevOps Engineer</h4>
+                            <p class="timeline-period">2022 - Present</p>
+                            <ul>
+                                <li>Designed and implemented 3-tier applications using modern technology stack</li>
+                                <li>Managed containerization using Docker and container orchestration</li>
+                                <li>Implemented CI/CD pipelines using Jenkins and GitLab</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="resume-section">
+                    <h3><i class="fas fa-graduation-cap"></i> Education</h3>
+                    <div class="timeline">
+                        <div class="timeline-item">
+                            <h4>Bachelor's in Computer Science</h4>
+                            <p class="timeline-period">2018 - 2022</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="resume-section">
+                    <h3><i class="fas fa-certificate"></i> Certifications</h3>
+                    <div class="certification-list">
+                        <div class="certification-item">
+                            <i class="fab fa-docker"></i> Docker Certified Associate
+                        </div>
+                        <div class="certification-item">
+                            <i class="fab fa-jenkins"></i> Jenkins Essential Training
+                        </div>
+                        <div class="certification-item">
+                            <i class="fab fa-gitlab"></i> GitLab Certified Associate
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="resume-buttons">
+                <a href="assets/pdf/nived.pdf" class="btn primary" target="_blank">
+                    <i class="fas fa-eye"></i> View Full Resume
+                </a>
+                <a href="assets/pdf/nived.pdf" class="btn secondary" download>
+                    <i class="fas fa-download"></i> Download Resume
+                </a>
+            </div>
         </div>
     </section>
 
