Simplified resume section to only include download option

--- a/index.html
+++ b/index.html
@@ -104,55 +104,10 @@
         <h2 class="section-title">Resume</h2>
         <div class="resume-content">
             <div class="resume-summary">
-                <p>Experienced DevOps professional specializing in containerization, CI/CD pipelines, and 3-tier application architecture. Proven track record in implementing scalable solutions using Docker, Jenkins, GitLab, and Terraform.</p>
+                <p>Download my detailed resume to learn more about my professional experience and qualifications in DevOps, containerization, and 3-tier application development.</p>
             </div>
-            <div class="resume-preview">
-                <div class="resume-section">
-                    <h3><i class="fas fa-briefcase"></i> Professional Experience</h3>
-                    <div class="timeline">
-                        <div class="timeline-item">
-                            <h4>DevOps Engineer</h4>
-                            <p class="timeline-period">2022 - Present</p>
-                            <ul>
-                                <li>Designed and implemented 3-tier applications using modern technology stack</li>
-                                <li>Managed containerization using Docker and container orchestration</li>
-                                <li>Implemented CI/CD pipelines using Jenkins and GitLab</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="resume-section">
-                    <h3><i class="fas fa-graduation-cap"></i> Education</h3>
-                    <div class="timeline">
-                        <div class="timeline-item">
-                            <h4>Bachelor's in Computer Science</h4>
-                            <p class="timeline-period">2018 - 2022</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resume-section">
-                    <h3><i class="fas fa-certificate"></i> Certifications</h3>
-                    <div class="certification-list">
-                        <div class="certification-item">
-                            <i class="fab fa-docker"></i> Docker Certified Associate
-                        </div>
-                        <div class="certification-item">
-                            <i class="fab fa-jenkins"></i> Jenkins Essential Training
-                        </div>
-                        <div class="certification-item">
-                            <i class="fab fa-gitlab"></i> GitLab Certified Associate
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
             <div class="resume-buttons">
-                <a href="assets/pdf/nived.pdf" class="btn primary" target="_blank">
-                    <i class="fas fa-eye"></i> View Full Resume
-                </a>
-                <a href="assets/pdf/nived.pdf" class="btn secondary" download>
+                <a href="assets/pdf/nived.pdf" class="btn primary" download>
                     <i class="fas fa-download"></i> Download Resume
                 </a>
             </div>
